deployments/openshift/kustomize/base/temporal/temporal-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: temporal
  labels:
    app: temporal-server
spec:
  ports:
    - port: 7233
      targetPort: 7233
      protocol: TCP
      name: grpc
  selector:
    app: temporal-server
  type: ClusterIP
