deployments/openshift/kustomize/base/temporal/temporal-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
  labels:
    app: temporal-ui
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: temporal-ui
  type: ClusterIP
