deployments/openshift/kustomize/base/temporal/temporal-ui-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: temporal-ui
  labels:
    app: temporal-ui
  annotations:
    # 142.16.0.0/11 is the approximate VPN address range.
    haproxy.router.openshift.io/ip_whitelist: 142.16.0.0/11
spec:
  to:
    kind: Service
    name: temporal-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
